[gd_scene load_steps=15 format=3 uid="uid://cj1s30j354pt0"]

[ext_resource type="Texture2D" uid="uid://b0fkypq6l6nb1" path="res://Assets_PixelAdventure/Main Characters/Virtual Guy.png" id="1_32m6c"]
[ext_resource type="Script" path="res://npc_1.gd" id="1_v6l4k"]
[ext_resource type="Shader" path="res://Character/npc_1.gdshader" id="2_a2qg6"]
[ext_resource type="PackedScene" uid="uid://b7rj8l1bm547p" path="res://Dialogues/components/npc/NPC_Dialogue_Area.tscn" id="3_u4xlv"]
[ext_resource type="Resource" uid="uid://1jpjeabujp5s" path="res://Dialogues/dialogues/escene1/npc1.dialogue" id="4_33fpw"]
[ext_resource type="AudioStream" uid="uid://b551rlcdgmqid" path="res://assets/sounds/Hola.mp3" id="5_68rm2"]
[ext_resource type="Texture2D" uid="uid://b2jwv8tob1pmw" path="res://Assets_PixelAdventure/Main Characters/Virtual.png" id="7_shtoa"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1dy6v"]
shader = ExtResource("2_a2qg6")
shader_parameter/deform = Vector2(2, 2)
shader_parameter/offset = Vector2(0, 0)
shader_parameter/modulate = Vector4(0, 0, 0, 0)
shader_parameter/flipY = false
shader_parameter/opacity = 0.5

[sub_resource type="Animation" id="Animation_lwyg1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_ldeq1"]
resource_name = "idle1"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 1, 2, 3, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xkqsv"]
_data = {
"RESET": SubResource("Animation_lwyg1"),
"idle1": SubResource("Animation_ldeq1")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_lxry6"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ehgc0"]
radius = 53.0094

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ijxib"]
shader = ExtResource("2_a2qg6")
shader_parameter/deform = Vector2(2, 2)
shader_parameter/offset = Vector2(0, 0)
shader_parameter/modulate = Vector4(0, 0, 0, 0.7)
shader_parameter/flipY = false
shader_parameter/opacity = 0.5

[node name="NPC1" type="CharacterBody2D"]
script = ExtResource("1_v6l4k")

[node name="npc1_sprite" type="Sprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_1dy6v")
scale = Vector2(3, 3)
texture = ExtResource("1_32m6c")
hframes = 11
vframes = 4
frame = 1

[node name="NPCAnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../npc1_sprite")
libraries = {
"": SubResource("AnimationLibrary_xkqsv")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_lxry6")

[node name="npc1_area" type="Area2D" parent="."]
visible = false

[node name="NPC_Dialogue_Area" parent="npc1_area" instance=ExtResource("3_u4xlv")]
dialogue_resource = ExtResource("4_33fpw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="npc1_area"]
position = Vector2(-1, 11)
shape = SubResource("CircleShape2D_ehgc0")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_68rm2")
bus = &"npc"

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_ijxib")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.0
offset_top = -35.0
offset_right = 31.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_shtoa")

[connection signal="area_entered" from="npc1_area" to="." method="_on_npc_1_area_area_entered"]
[connection signal="area_exited" from="npc1_area" to="." method="_on_npc_1_area_area_exited"]
